web-infras/parser/tests/fixtures/babel/es2015/uncategorised/281/output.txt
[SyntaxError]: duplicate params (1,48)
1|"use strict"; function x({ b: { a } }, [{ b: { a } }]){}
 |                                              ^
